DLang.Tests/Tests/errors/semantic/type_mismatch.d
var x := 1;
var y := "hello";
var z := x + y;
